<resources>
    <string name="app_name">EDS</string>
    <string name="start_day">Start Day</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading...</string>
    <string name="planned_calls">Planned Calls</string>
    <string name="upload">Upload</string>
    <string name="end_day">End Day</string>
    <string name="reports">Reports</string>
    <string name="sync_data">Sync Data</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name:</string>
    <string name="last_sale">Last Sale:</string>
    <string name="channel">Channel:</string>
    <string name="last_sale_date">Last Sale Date:</string>
    <string name="total_visits">Total Visits:</string>
    <string name="last_sale_qty">Last Sale Quantity:</string>
    <string name="address">Address:</string>
    <string name="outlet_summary">Outlet Summary</string>
    <string name="crop_image">Crop Image</string>
    <string name="outlets">Outlets</string>
    <string name="outlet_code">Outlet code: %s</string>
    <string name="route_code">Route Code:</string>

    <string name="location_dialog_message">We\'ll give you best experience, providing you with a filtered area for brevity.</string>
    <string name="location_dialog_title">Allow \"EDS\" to access your location while you are using the app?</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter outlet name or code</string>
    <string name="pop_status">POP Status:</string>
    <string name="merchandizing">Merchandising</string>
    <string name="outlet_name">Outlet Name:</string>
    <string name="next">Next</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="customer_input">Customer Input</string>

    <string name="order_amount">Order Amount:</string>
    <string name="amount">Total Amount</string>
    <string name="cnic">Customer CNIC:</string>
    <string name="remarks">Remarks:</string>
    <string name="after_merchandize">After Merchandise</string>
    <string name="before_merchandize">Before Merchandise</string>
    <string name="show_planogram">Show Planogram</string>
    <string name="asset_verification">Asset Verification</string>
    <string name="customer_complaint">Customer Complaint</string>
    <string name="scanner">Scanner</string>
    <string name="mobile_number_for_order">Mobile No. for Order:</string>
    <string name="mobile_number_hint">03XXXXXXXXX</string>
    <string name="remarks_hint">Type Remarks Here</string>
    <string name="complete_order">Complete Order</string>
    <string name="no_order_reason">Choose reason for No Order</string>
    <string name="asset_code">Asset Code</string>
    <string name="verification">Verification</string>
    <string name="reason">Reason</string>
    <string name="scan_barcode">Barcode Scan</string>
    <string name="add">Add</string>
    <string name="pkg_name">Package Name:</string>
    <string name="_name">Name</string>
    <string name="avl_stk">Avl Stock</string>
    <string name="wh_stk">Wh Stock</string>
    <string name="order">Order</string>
    <string name="promotions">Promotions</string>
    <string name="available_promotions">Available Promotions</string>
    <string name="outlet_location">Outlet Location:</string>
    <string name="your_location">Your Location:</string>
    <string name="distance">Distance:</string>
    <string name="reach_to_specific_outlet_and_try_again">Reach to specific Outlet and try again</string>
    <string name="incorrect_location">Location Mismatch!</string>
    <string name="order_booking">Order Booking</string>
    <string name="save">Save</string>
    <string name="retake_image">Take new Picture</string>
    <string name="quantity">Quantity:</string>
    <string name="rate">Rate:</string>
    <string name="discount">Discount:</string>
    <string name="total">Total:</string>
    <string name="add_packages">Add Packages</string>
    <string name="discount_amount">Discount Amount:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="qty">Qty:</string>
    <string name="cash_memo">Cash Memo</string>
    <string name="product_group">Product Group:</string>
    <string name="unit">Unit(s)</string>
    <string name="carton_s">Carton(s)</string>
    <string name="carton_unit">Carton(Unit)</string>
    <string name="edit">Edit Order</string>
    <string name="scanned">Scanned</string>
    <string name="enter_remarks_here">Enter Remarks Here</string>
    <string name="please_enter_reason_for_no_sale">Please enter reason for no sale</string>
    <string name="end_day_msg">Are you sure you want to end your day? After ending your day you will not be able to take any order</string>
    <string name="day_closing_title">Day Closing!</string>
    <string name="update_routes_title">Update Routes and Outlets!</string>
    <string name="update_routes_msg">Are you sure you want to fetch updated routes and outlets?</string>
    <string name="day_already_ended">Your day has already ended</string>
    <string name="already_updated">Already Updated</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">Please enter valid username</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="are_you_sure_to_logout">Are you sure you want to Logout?</string>
    <string name="logout">Logout</string>
    <string name="already_started_day">Already started your day</string>
    <string name="profile_will_avl_soon">Profile will be available soon!</string>
    <string name="have_not_started_day">You have not even started your day</string>
    <string name="checkout_without_order">Checkout without Order!</string>
    <string name="checkout_without_order_msg">Are you sure you want to checkout without any order?</string>
    <string name="fcm_message">EDS Notification</string>
    <string name="default_notification_channel_id">eds_system</string>
    <string name="customer_strn">Customer STRN :</string>
    <string name="sales_tax_registration_number">Sales tax registration number</string>
    <string name="_13_digits_cnic">13 digits CNIC</string>
    <string name="planned">Planned</string>
    <string name="completed">Completed</string>
    <string name="productive">Productive</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="strike_rate">Strike Rate</string>
    <string name="avg_sku">Avg Sku</string>
    <string name="drop_size">Drop Size</string>
    <string name="access_to_update">Need Permission to update!</string>
    <string name="loading">Loading...</string>
    <string name="download_cancel">Download Cancelled</string>
    <string name="sub_total">Sub-Total:</string>


</resources>
