<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="30">

            <TextView
                android:id="@+id/asset_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/asset_code"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/verfication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/verification"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/reason"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toBottomOf="@id/header_cardView">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnScanBarcode"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:text="@string/scan_barcode"
        android:textSize="22sp"
        android:theme="@style/PositiveButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>