<?xml version="1.0" encoding="utf-8"?>

<androidx.gridlayout.widget.GridLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:columnCount="2"
    app:rowCount="3"
    app:useDefaultMargins="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
            android:id="@+id/btnStartDay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/tvStartDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_timer_start"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:layout_centerInParent="true"
                android:textSize="16sp"
                android:text="@string/start_day"/>
            <TextView
                android:id="@+id/tvRunningDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"
                android:padding="5dp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"

                />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_cloud_download"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:text="@string/download"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnPlannedCall"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorAccent"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/tvPlannedCalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_planned_calls"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:text="@string/planned_calls"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnReports"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/tvReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_reports"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:text="@string/reports"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnEndDay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/tvEndDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_timer_end"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:text="@string/end_day"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorAccent"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@drawable/ic_cloud_upload"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:text="@string/upload"/>
        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>

