<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <TextView
        android:id="@+id/outlet_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:text="@string/outlet_location"
        android:textSize="14sp"


        />

    <TextView
        android:id="@+id/your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/your_location"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutletLocation"

        />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/distance"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourLocation"

        />

    <TextView
        android:id="@+id/change_location_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/reach_to_specific_outlet_and_try_again"

        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistance"

        />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="outlet_location,your_location,distance"

        tools:layout_editor_absoluteX="123dp"
        android:layout_width="wrap_content" />
    <TextView
        android:id="@+id/tvOutletLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="31.2598756 / 74.2596325"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/outlet_location" />

    <TextView
        android:id="@+id/tvYourLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="31.2597756 / 74.2563555"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/your_location" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"


        android:text="15672 Meters"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier3"
        app:layout_constraintTop_toTopOf="@+id/distance"
        app:layout_constraintBottom_toBottomOf="@+id/distance"

        />





</androidx.constraintlayout.widget.ConstraintLayout>
