<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="150dp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp"
                app:cardCornerRadius="0dp"
                app:contentPadding="5dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="10dp"
                >
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black"
                        android:text="@string/outlet_name"
                        android:textSize="14sp"


                        />

                    <TextView
                        android:id="@+id/pkg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/pkg_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"

                        />


                    <android.support.constraint.Barrier
                        android:id="@+id/barrier3"
                        android:layout_height="wrap_content"
                        app:barrierDirection="right"
                        app:constraint_referenced_ids="name,pkg"

                        tools:layout_editor_absoluteX="123dp"
                        android:layout_width="wrap_content" />
                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Eat Drink Food Point"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@+id/barrier3"
                        app:layout_constraintTop_toTopOf="@+id/name" />

                    <TextView
                        android:id="@+id/tvPackage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SSRB"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/barrier3"
                        app:layout_constraintTop_toTopOf="@+id/pkg" />



                </android.support.constraint.ConstraintLayout>
            </android.support.design.card.MaterialCardView>
            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp"
                app:cardCornerRadius="0dp"
                app:contentPadding="5dp"
                android:layout_margin="2dp"
                android:backgroundTint="@color/status_green"
                >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:weightSum="40"
                        android:padding="5dp"
                        >
                        <TextView
                            android:id="@+id/item_name"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:text="@string/_name"
                            android:textSize="13sp"


                            />
                        <TextView
                            android:id="@+id/avl_stock"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:text="@string/avl_stk"
                            android:textSize="12sp"


                            />
                        <TextView
                            android:id="@+id/wh_stock"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/wh_stk"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="12sp"


                            />



                        <TextView
                            android:id="@+id/order"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/order"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:layout_weight="10"
                            android:textSize="14sp"
                            android:gravity="center"
                            />

                    </LinearLayout>


            </android.support.design.card.MaterialCardView>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/order_booking_item_view"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_margin="10dp"
            android:theme="@style/PositiveButton"
            android:text="@string/add"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textSize="22sp"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:layout_margin="10dp"
            android:theme="@style/PositiveButton"
            android:text="@string/next"
            android:textSize="22sp"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>